--- a/style.css
+++ b/style.css
@@ -343,7 +343,7 @@
     height: 525px;
     width: 400px;
     border-radius: 4px;
-    background-image: linear-gradient(to bottom,rgba(0,0,0,0)0%,rgba(17,17,17,0.6) 100%),url('/1/images/pic2.jpg');
+    background-image: linear-gradient(to bottom,rgba(0,0,0,0)0%,rgba(17,17,17,0.6) 100%),url('images/pic2.jpg');
     background-size: cover;
     position: relative;
     color: #ffff;
@@ -351,7 +351,7 @@
 }
 
 .services-card:nth-child(2) {
-  background-image: linear-gradient(to bottom,rgba(0, 0, 0, 0)0%,rgba(17, 17, 17, 0.6) 100%),url('/1/images/pic3.jpg');
+  background-image: linear-gradient(to bottom,rgba(0, 0, 0, 0)0%,rgba(17, 17, 17, 0.6) 100%),url('images/pic3.jpg');
 
 }
 
@@ -521,3 +521,4 @@
     
     
 }
+
